src/app/components/pages/projects/all/all.component.scss
@import "/src/app/styles/colours.scss";

article {
  margin-left: 3em;
}

h3 {
  margin-bottom: 0.2em;

  .tag {
    font-size: 0.6em;
    margin-left: 0.2em;
    padding: 0.2em 0.4em 0.2em 0.4em;
    border-radius: 1em;
    border-width: 1px;
    border-style: solid;
    user-select: none;
  }

  .incomplete {
    color: #ff9844;
    border-color: darken(#ff9844, 10%);
  }

  .abandoned {
    color: #ff6944;
    border-color: darken(#ff6944, 10%);
  }

  .owner {
    color: $blue;
    border-color: darken($blue, 10%);
  }
}

.content {
  p {
    margin-top: 0;
  }
}

